--- a/README.adoc
+++ b/README.adoc
@@ -166,3 +166,38 @@ Tail log:
 ----
 karaf@root()> log:tail
 ----
+
+== Test
+
+=== Send notification to jms
+
+[source,shell]
+----
+curl -X 'POST' \
+  'http://localhost:8080/notification' \
+  -H 'accept: application/json;charset=utf-8' \
+  -H 'X-Routing-System: jms' \
+  -H 'Content-Type: application/json;charset=utf-8' \
+  -d '{
+  "reference": "INF161200001",
+  "date": "01/01/1970 00:00:00",
+  "message": "Update contract"
+}'
+----
+
+
+=== Send notification to kafka
+
+[source,shell]
+----
+curl -X 'POST' \
+  'http://localhost:8080/notification' \
+  -H 'accept: application/json;charset=utf-8' \
+  -H 'X-Routing-System: kafka' \
+  -H 'Content-Type: application/json;charset=utf-8' \
+  -d '{
+  "reference": "INF161200001",
+  "date": "01/01/1970 00:00:00",
+  "message": "Update contract"
+}'
+----
