Update readme links

--- a/src/scripts/README.adoc
+++ b/src/scripts/README.adoc
@@ -1,5 +1,6 @@
 = Kubernetes help
 
+* Kubernetes Dashboard: http://localhost:8001/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/
 * RedPanda Kafka UI: http://192.168.49.2:32001
 * ActiveMQ WebConsole: http://192.168.49.2:31112
 * Prometheus: http://192.168.49.2:32090
